re PR tree-optimization/42386 (ICE in ipcp_iterate_stage, at ipa-cp.c:766)

PR c++/42386
	* ipa.c (function_and_variable_visibility): Clear same_comdat_group
	links of DECL_EXTERNAL nodes.

	* g++.dg/opt/dtor3.C: New test.

From-SVN: r155321